--- a/src/styles.css
+++ b/src/styles.css
@@ -1,13 +1,13 @@
+body {
+  background: blueviolet;
+}
+
 #canvas-wrapper {
-  position: absolute;
-  height: 100%;
-  width: 100%;
-  left: 0;
-  top: 0;
+  height: 400px;
+  width: 600px;
 }
 
 #canvas-wrapper canvas {
-  position: absolute;
   height: 100%;
   width: 100%;
 }
